# Tarea1_Cadenas

./: INSTALACION.md  README.md  pyproject.toml  verificar_instalacion.py
Proyecto Final/: Codigo_proyecto_final.R
Segundo_Parcial/docs/: Fe_positions_v2.txt  Nd_positions_v2 (3).txt
Segundo_Parcial/notebooks/: recocido_simulado_materiales_magneticos_ejecutado.ipynb
Segundo_Parcial/resultados/: resumen_resultados.csv
Segundo_Parcial/src/: __init__.py  lattice_2d.py  lattice_3d.py  morse_potential.py  simulated_annealing.py
Tarea 1/: INSTALACION.md  requirements.txt
Tarea 1/notebooks/: ejercicio_1a.ipynb  ejercicio_1b.ipynb  ejercicio_2.ipynb
Tarea 1/src/: estadisticas.py
Tarea 2/: README.md
Tarea 2/informe_taller_2/: README.md  main.aux  main.lof  main.lot  main.tex  main.toc  main_v2.aux  main_v2.tex  main_v2.toc
Tarea 2/informe_taller_2/plantilla_src/: config.tex  template.tex
Tarea 2/informe_taller_2/plantilla_src/cfg/: page.tex
Tarea 2/informe_taller_2/plantilla_src/env/: imports.tex
Tarea 2/informe_taller_2/plantilla_src/etc/: contenido.tex  contenido_tarea2.tex  contenido_tarea2_v2.tex  example.tex  referencias.bib
Tarea 2/notebooks/: tarea2_completa.ipynb  tarea2_conteo_aproximado.ipynb
Tarea 2/src/: __init__.py  mcmc_counting.py  mcmc_improved.py
Tarea_3/notebooks/: tarea3_ising.ipynb
Tarea_3/resultados/: resultados_comparacion.csv
Tarea_3/src/: __init__.py  ising_model.py
notebooks/: ejercicio_1a.ipynb
src/: __init__.py  hard_core.py  q_coloraciones.py  visualizacion.py
(+1 files in other folders)
