[project]
name = "tarea1-cadenas-markov"
version = "1.0.0"
description = "Tarea 1: Gibbs Sampler - Cadenas de Markov"
authors = [
    {name = "Sergio Andrés Díaz Vera", email = "seadiazve@unal.edu.co"},
    {name = "Julián Mateo Espinosa Ospina", email = "juespinosao@unal.edu.co"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
